[gd_scene load_steps=9 format=3 uid="uid://h2l1jsw4ksk5"]

[ext_resource type="Script" uid="uid://dgiuclq5mgumt" path="res://scripts/items.gd" id="1_4pu7h"]
[ext_resource type="Theme" uid="uid://drtks6vtivflm" path="res://themes/default.tres" id="2_tbt0q"]
[ext_resource type="Texture2D" uid="uid://bhfx83onrxcqo" path="res://sprites/interface/496_RPG_icons/Ac_Necklace01.png" id="3_np6ob"]
[ext_resource type="Texture2D" uid="uid://bk0vngqh0ao2m" path="res://sprites/interface/496_RPG_icons/Ac_Ring02.png" id="4_6xdmy"]
[ext_resource type="Texture2D" uid="uid://nnr74aq7nxee" path="res://sprites/interface/496_RPG_icons/Ac_Necklace03.png" id="5_ae1on"]
[ext_resource type="Texture2D" uid="uid://coy8gwkrhi4rd" path="res://sprites/interface/496_RPG_icons/I_Bone.png" id="6_fb4rb"]
[ext_resource type="Texture2D" uid="uid://cynljvpa2yyap" path="res://sprites/interface/496_RPG_icons/Ac_Necklace02.png" id="7_8i7tl"]
[ext_resource type="Texture2D" uid="uid://d3g6eg5k2lagn" path="res://sprites/interface/kenney_ui-pack-adventure/PNG/Default/button_brown_close.png" id="8_isd83"]

[node name="Items" type="CanvasLayer"]
script = ExtResource("1_4pu7h")

[node name="Panel" type="PanelContainer" parent="."]
z_index = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -186.5
offset_top = -226.0
offset_right = 186.5
offset_bottom = 226.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("2_tbt0q")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 2

[node name="Header" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Items"
horizontal_alignment = 1

[node name="List" type="ItemList" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
auto_width = true
auto_height = true
item_count = 5
item_0/text = "Ruby Necklace"
item_0/icon = ExtResource("3_np6ob")
item_1/text = "Engraved Ring"
item_1/icon = ExtResource("4_6xdmy")
item_2/text = "Diamond Necklace"
item_2/icon = ExtResource("5_ae1on")
item_3/text = "Bone"
item_3/icon = ExtResource("6_fb4rb")
item_4/text = "Sapphire Necklace"
item_4/icon = ExtResource("7_8i7tl")

[node name="Buy" type="VBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="Silver" type="Label" parent="Panel/VBoxContainer/Buy"]
layout_mode = 2
text = "Silver"

[node name="BuyButtons" type="HBoxContainer" parent="Panel/VBoxContainer/Buy"]
layout_mode = 2

[node name="Buy" type="Button" parent="Panel/VBoxContainer/Buy/BuyButtons"]
layout_mode = 2
size_flags_horizontal = 3
text = "Buy"

[node name="BuyAll" type="Button" parent="Panel/VBoxContainer/Buy/BuyButtons"]
layout_mode = 2
size_flags_horizontal = 3
text = "Buy All"

[node name="KeepButtons" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="Keep" type="Button" parent="Panel/VBoxContainer/KeepButtons"]
layout_mode = 2
size_flags_horizontal = 3
text = "Keep"

[node name="KeepAll" type="Button" parent="Panel/VBoxContainer/KeepButtons"]
layout_mode = 2
size_flags_horizontal = 3
text = "Keep All"

[node name="StealButtons" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="Steal" type="Button" parent="Panel/VBoxContainer/StealButtons"]
layout_mode = 2
size_flags_horizontal = 3
text = "Steal"

[node name="StealAll" type="Button" parent="Panel/VBoxContainer/StealButtons"]
layout_mode = 2
size_flags_horizontal = 3
text = "Steal All"

[node name="CloseButton" type="TextureButton" parent="Panel"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
texture_normal = ExtResource("8_isd83")
stretch_mode = 5

[connection signal="pressed" from="Panel/VBoxContainer/Buy/BuyButtons/Buy" to="." method="_on_buy_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/KeepButtons/Keep" to="." method="_on_keep_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/KeepButtons/KeepAll" to="." method="_on_keep_all_pressed"]
